templates/umbrella_template.yaml
---
# Source: umbrella/charts/dashboard/templates/dashboard_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-dashboard
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-dashboard
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: dashboard-0.6.3
    app.kubernetes.io/version: 0.6.1
    dashboard.tekton.dev/release: 0.6.1
    version: 0.6.1
    app.kubernetes.io/name: dashboard
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9097
      protocol: TCP
      targetPort: 9097
  selector:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-dashboard
    app.kubernetes.io/name: dashboard
---
# Source: umbrella/charts/pipelines/templates/controller_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-pipelines-controller
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: pipelines-0.11.5
    app.kubernetes.io/version: "v0.11.3"
    pipeline.tekton.dev/release: "v0.11.3"
    version: "v0.11.3"
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: controller
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: controller
---
# Source: umbrella/charts/pipelines/templates/webhook_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-pipelines-webhook
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: pipelines-0.11.5
    app.kubernetes.io/version: "v0.11.3"
    pipeline.tekton.dev/release: "v0.11.3"
    version: "v0.11.3"
    app.kubernetes.io/component: webhook
    app.kubernetes.io/name: webhook
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: http-metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
    - name: http-profiling
      port: 8008
      protocol: TCP
      targetPort: 8008
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/component: webhook
    app.kubernetes.io/name: webhook
---
# Source: umbrella/charts/triggers/templates/controller_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-triggers-controller
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: triggers-0.4.0
    app.kubernetes.io/version: "v0.4.0"
    triggers.tekton.dev/release: "v0.4.0"
    version: "v0.4.0"
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: controller
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: controller
---
# Source: umbrella/charts/triggers/templates/webhook_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-triggers-webhook
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: triggers-0.4.0
    app.kubernetes.io/version: "v0.4.0"
    triggers.tekton.dev/release: "v0.4.0"
    version: "v0.4.0"
    app.kubernetes.io/component: webhook
    app.kubernetes.io/name: webhook
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: http-metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
    - name: http-profiling
      port: 8008
      protocol: TCP
      targetPort: 8008
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/component: webhook
    app.kubernetes.io/name: webhook
---
# Source: umbrella/charts/dashboard/templates/dashboard_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-dashboard-controller
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-dashboard
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: dashboard-0.6.3
    app.kubernetes.io/version: 0.6.1
    dashboard.tekton.dev/release: 0.6.1
    version: 0.6.1
    app.kubernetes.io/name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: dashboard
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/part-of: tekton-dashboard
      app.kubernetes.io/name: dashboard
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app.kubernetes.io/component: dashboard
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/part-of: tekton-dashboard
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: dashboard-0.6.3
        app.kubernetes.io/version: 0.6.1
        dashboard.tekton.dev/release: 0.6.1
        version: 0.6.1
        app.kubernetes.io/name: dashboard
    spec:
      serviceAccountName: release-name-dashboard
      containers:
        - name: dashboard
          image: "gcr.io/tekton-releases/github.com/tektoncd/dashboard/cmd/dashboard:v0.6.1"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 9097
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 9097
          readinessProbe:
            httpGet:
              path: /readiness
              port: 9097
---
# Source: umbrella/charts/pipelines/templates/controller_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-pipelines-controller
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: pipelines-0.11.5
    app.kubernetes.io/version: "v0.11.3"
    pipeline.tekton.dev/release: "v0.11.3"
    version: "v0.11.3"
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/part-of: tekton-pipelines
      app.kubernetes.io/component: controller
      app.kubernetes.io/name: controller
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/part-of: tekton-pipelines
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: pipelines-0.11.5
        app.kubernetes.io/version: "v0.11.3"
        pipeline.tekton.dev/release: "v0.11.3"
        version: "v0.11.3"
        app.kubernetes.io/component: controller
        app.kubernetes.io/name: controller
    spec:
      serviceAccountName: release-name-pipelines
      containers:
        - name: controller
          image: "gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/controller:v0.11.3"
          imagePullPolicy: "IfNotPresent"
          args:
            - "-kubeconfig-writer-image"
            - "gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/kubeconfigwriter:v0.11.3"
            - "-creds-image"
            - "gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/creds-init:v0.11.3"
            - "-git-image"
            - "gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/git-init:v0.11.3"
            - "-nop-image"
            - "tianon/true"
            - "-shell-image"
            - "busybox"
            - "-gsutil-image"
            - "google/cloud-sdk"
            - "-entrypoint-image"
            - "gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/entrypoint:v0.11.3"
            - "-imagedigest-exporter-image"
            - "gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/imagedigestexporter:v0.11.3"
            - "-pr-image"
            - "gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/pullrequest-init:v0.11.3"
            - "-build-gcs-fetcher-image"
            - "gcr.io/tekton-releases/github.com/tektoncd/pipeline/vendor/github.com/googlecloudplatform/cloud-builders/gcs-fetcher/cmd/gcs-fetcher:v0.11.3"
          volumeMounts:
            - mountPath: /etc/config-logging
              name: config-logging
          ports:
            - containerPort: 9090
              protocol: TCP
      volumes:
        - name: config-logging
          configMap:
            name: release-name-pipelines-logging
---
# Source: umbrella/charts/pipelines/templates/webhook_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-pipelines-webhook
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: pipelines-0.11.5
    app.kubernetes.io/version: "v0.11.3"
    pipeline.tekton.dev/release: "v0.11.3"
    version: "v0.11.3"
    app.kubernetes.io/component: webhook
    app.kubernetes.io/name: webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/part-of: tekton-pipelines
      app.kubernetes.io/component: webhook
      app.kubernetes.io/name: webhook
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/part-of: tekton-pipelines
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: pipelines-0.11.5
        app.kubernetes.io/version: "v0.11.3"
        pipeline.tekton.dev/release: "v0.11.3"
        version: "v0.11.3"
        app.kubernetes.io/component: webhook
        app.kubernetes.io/name: webhook
    spec:
      serviceAccountName: release-name-pipelines
      containers:
        - name: webhook
          image: "gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/webhook:v0.11.3"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - name: metrics
              containerPort: 9090
            - name: profiling
              containerPort: 8008
            - name: https-webhook
              containerPort: 8443
---
# Source: umbrella/charts/triggers/templates/controller_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-triggers-controller
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: triggers-0.4.0
    app.kubernetes.io/version: "v0.4.0"
    triggers.tekton.dev/release: "v0.4.0"
    version: "v0.4.0"
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/part-of: tekton-triggers
      app.kubernetes.io/component: controller
      app.kubernetes.io/name: controller
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/part-of: tekton-triggers
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: triggers-0.4.0
        app.kubernetes.io/version: "v0.4.0"
        triggers.tekton.dev/release: "v0.4.0"
        version: "v0.4.0"
        app.kubernetes.io/component: controller
        app.kubernetes.io/name: controller
    spec:
      serviceAccountName: release-name-triggers
      containers:
        - name: controller
          image: "gcr.io/tekton-releases/github.com/tektoncd/triggers/cmd/controller:v0.4.0"
          imagePullPolicy: "IfNotPresent"
          args:
            - "-logtostderr"
            - "-stderrthreshold"
            - "INFO"
            - "-el-image"
            - "gcr.io/tekton-releases/github.com/tektoncd/triggers/cmd/eventlistenersink:v0.4.0"
            - "-el-port"
            - "8080"
            - "-period-seconds"
            - "10"
            - "-failure-threshold"
            - "1"
          ports:
            - containerPort: 9090
              protocol: TCP
---
# Source: umbrella/charts/triggers/templates/webhook_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-triggers-webhook
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: triggers-0.4.0
    app.kubernetes.io/version: "v0.4.0"
    triggers.tekton.dev/release: "v0.4.0"
    version: "v0.4.0"
    app.kubernetes.io/component: webhook
    app.kubernetes.io/name: webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/part-of: tekton-triggers
      app.kubernetes.io/component: webhook
      app.kubernetes.io/name: webhook
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/part-of: tekton-triggers
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: triggers-0.4.0
        app.kubernetes.io/version: "v0.4.0"
        triggers.tekton.dev/release: "v0.4.0"
        version: "v0.4.0"
        app.kubernetes.io/component: webhook
        app.kubernetes.io/name: webhook
    spec:
      serviceAccountName: release-name-triggers
      containers:
        - name: webhook
          image: "gcr.io/tekton-releases/github.com/tektoncd/triggers/cmd/webhook:v0.4.0"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - name: metrics
              containerPort: 9090
            - name: profiling
              containerPort: 8008
            - name: https-webhook
              containerPort: 8443
---
# Source: umbrella/charts/pipelines/templates/webhook_admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook.pipeline.tekton.dev
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: pipelines-0.11.5
    app.kubernetes.io/component: webhook
webhooks:
  - name: webhook.pipeline.tekton.dev
    admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: release-name-pipelines-webhook
        namespace: default
    failurePolicy: Fail
    sideEffects: None
---
# Source: umbrella/charts/triggers/templates/webhook_admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-triggers-webhook
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: triggers-0.4.0
    app.kubernetes.io/component: webhook
webhooks:
  - name: webhook.triggers.tekton.dev
    admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: release-name-triggers-webhook
        namespace: default
    failurePolicy: Fail
    sideEffects: None
---
# Source: umbrella/charts/pipelines/templates/webhook_admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.pipeline.tekton.dev
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/component: webhook
webhooks:
  - name: validation.webhook.pipeline.tekton.dev
    admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: release-name-pipelines-webhook
        namespace: default
    failurePolicy: Fail
    sideEffects: None
---
# Source: umbrella/charts/pipelines/templates/webhook_admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: config.webhook.pipeline.tekton.dev
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: pipelines-0.11.5
    app.kubernetes.io/component: webhook
webhooks:
  - name: config.webhook.pipeline.tekton.dev
    admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: release-name-pipelines-webhook
        namespace: default
    failurePolicy: Fail
    sideEffects: None
    objectSelector:
      matchLabels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/part-of: tekton-pipelines
---
# Source: umbrella/charts/triggers/templates/webhook_admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: release-name-triggers-validation
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: triggers-0.4.0
    app.kubernetes.io/component: webhook
webhooks:
  - name: validation.webhook.triggers.tekton.dev
    admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: release-name-triggers-webhook
        namespace: default
    failurePolicy: Fail
    sideEffects: None
---
# Source: umbrella/charts/triggers/templates/webhook_admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: release-name-triggers-config
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: tekton-triggers
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: triggers-0.4.0
    app.kubernetes.io/component: webhook
webhooks:
  - name: config.webhook.triggers.tekton.dev
    admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: release-name-triggers-webhook
        namespace: default
    failurePolicy: Fail
    sideEffects: None
    objectSelector:
      matchLabels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/part-of: tekton-triggers
